sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:18: error: 'while' expected but identifier found.
    While(swapped==true)
    ^AlgBubbleSort1:19: error: '(' expected but '}' found.
}
^