sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort(i:Int,j:Int,k:Int,swapped:Boolean)  {

	swapped=true;
	
     do {
	
		for(i<-0 to getNombreValeurs()-1){
		
			if( plusPetitQue(i+1,i)==true ){
				echange(i,i+1);
				swapped=true;
			}
		}
		i++;
    }
    
    While(swapped==true)
}
